[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tutorial-2"
version = "0.0.10"
authors = [
  { name="Martin Vrachev", email="mvrachev@vmware.com" },
]
description = "Tutorial package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MVrachev/tutorial-2"
"Bug Tracker" = "https://github.com/MVrachev/tutorial-2/issues"